src/objects/Document__c.object
<CustomObject>
    <description>Represents a Document.</description>
    <fields>
        <fullName>Abbreviated_Name__c</fullName>
        <description>An user defined name for the Document.</description>
        <label>Abbreviated Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>Name of the Document.</description>
        <label>Document Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>Edition of the Document.</description>
        <label>Edition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The date from which this Document became effective allowing a Document to be Published but not yet Effective until the date specified. This can be used to grant access to the Document but prevent processes from proceeding until this Effective Date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Document record is currently active or not.</description>
        <label>Is active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The primary Language in which the Document is written.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <description>The date that this Document was published.</description>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date when the Document is going to be reviewed.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>The revision of the Document.</description>
        <label>Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Station record that has uploaded and manages this Document.</description>
        <label>Station</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Determines the type of document.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                    <label>Online documentation</label>
                </value>
                <value>
                    <fullName>Software</fullName>
                    <label>Software-based documentation</label>
                </value>
                <value>
                    <fullName>Files</fullName>
                    <label>Files on Servers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of the Document.</description>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Review_Date__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_IGOMs</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Language__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.IGOM</value>
        </filters>
        <label>All IGOMs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DCMT-{0000000000}</displayFormat>
        <label>Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <recordTypes>
        <fullName>GOM</fullName>
        <active>true</active>
        <description>Record type to represent an GOM Document.</description>
        <label>GOM</label>
    </recordTypes>
    <recordTypes>
        <fullName>IGOM</fullName>
        <active>true</active>
        <description>Record type to represent an IGOM Document.</description>
        <label>IGOM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>